# LittleBrother

./: .gitignore  LICENSE.md  MOG2.ipynb  Motion Detector.py.ipynb  Optical Flow.ipynb  README.md  SystemFlowchart.drawio  camera_env_demo.py  clean.sh  demo.ipynb  detect_movement.ipynb  face_detection_demo.py  main.ipynb  main.py  main_with_camera.ipynb  motion_detection_utils.py  opticalflow.py  papers.bib  performance_measure.py  playground.py  pyproject.toml  results.csv  video_frame_initializer.py
camera/: camera_source.py  frame_controller.py  frame_source.py  utils.py  video_frame_initializer.py  video_processor.py  video_source.py
config/: config.yaml
db/: db_lite.py
demos/: camera_env_demo.py  demo.ipynb  telegram_integration_demo.py
face_recognizer/: face_recognizer.py
local_utils/: bbox_utils.py  config.py  frames.py  logger.py  view.py
main/: main.py  telegram_bot.py  video_processor.py
motion_detector/: motion_detector.py
msg_bot/: telegram_bot.py  utils.py
people_detector/: people_detector.py
results and plots/: average_fps.csv  crop.csv  motion_detector.csv  yolo_size.csv
utils/: bbox_utils.py  logger.py  view.py
