[project]
name = "computervision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "facenet-pytorch>=2.5.3",
    "ipykernel>=6.29.5",
    "notebook>=7.3.2",
    "pillow>=11.1.0",
    "pytelegrambotapi>=4.26.0",
    "torch>=2.5.1",
    "ultralytics>=8.3.58",
]
